<?xml version="1.0" encoding="utf-8"?>

<!--
Assignment #: InClass 03
File Name: Pflug_InClass03 - activity_department_select.xml
Full Name: Kristin Pflug
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentSelectActivity">

    <RadioGroup
        android:id="@+id/dept_list"
        android:layout_width="260dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.221">

        <RadioButton
            android:id="@+id/dept_comp_sci_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_comp_sci_radio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dept_software_info_sys_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_software_info_sys_radio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dept_bioinformatics_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_bioinformatics_radio"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/dept_data_science_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dept_data_science_radio"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/dept_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dept_cancel_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dept_submit_button"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <Button
        android:id="@+id/dept_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/dept_submit_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />
</androidx.constraintlayout.widget.ConstraintLayout>