<?xml version="1.0" encoding="utf-8"?>

<!--
Assignment #: InClass 03
File Name: Pflug_InClass03 - activity_profile_display.xml
Full Name: Kristin Pflug
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileDisplayActivity">

    <TextView
        android:id="@+id/profile_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/reg_name_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_email_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_label" />

    <TextView
        android:id="@+id/profile_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_id_label"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_label" />

    <TextView
        android:id="@+id/profile_dept_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/reg_dept_label_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_id_label" />

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="asdf"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profile_name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="asdf"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profile_email_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />

    <TextView
        android:id="@+id/profile_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:text="asdf"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profile_id_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_text" />

    <TextView
        android:id="@+id/profile_dept_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="adsf"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/profile_dept_label"
        app:layout_constraintTop_toBottomOf="@+id/profile_id_text" />
</androidx.constraintlayout.widget.ConstraintLayout>